[gd_scene load_steps=4 format=3 uid="uid://diso5skb1x1y3"]

[ext_resource type="Script" path="res://Scripts/editor.gd" id="1_ij4yu"]
[ext_resource type="Theme" uid="uid://ds4embrwki5gr" path="res://theme.tres" id="2_qy24j"]
[ext_resource type="AudioStream" uid="uid://dqkt1bnwn8sq6" path="res://SFX/hitsound.wav" id="3_rweov"]

[node name="editor" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ij4yu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1086.0
color = Color(0, 0, 0, 1)

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 122.0
offset_right = 1917.0
offset_bottom = 972.0
horizontal_scroll_mode = 0

[node name="vbox" type="VBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="eventlist" type="ItemList" parent="scroll/vbox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_qy24j")
allow_rmb_select = true
allow_search = false
auto_height = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ogg")
use_native_dialog = true

[node name="load" type="Button" parent="."]
layout_mode = 0
offset_left = 1589.0
offset_top = 35.0
offset_right = 1765.0
offset_bottom = 85.0
theme = ExtResource("2_qy24j")
text = "LOAD"

[node name="bpm" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1236.0
offset_top = 30.0
offset_right = 1413.0
offset_bottom = 96.0
theme = ExtResource("2_qy24j")
placeholder_text = "ENTER BPM"

[node name="notice" type="AcceptDialog" parent="."]

[node name="name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 15.0
offset_right = 1230.0
offset_bottom = 112.0
theme = ExtResource("2_qy24j")
placeholder_text = "enter song name"

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 189.0
offset_top = 21.0
offset_right = 432.0
offset_bottom = 100.0
theme = ExtResource("2_qy24j")
text = "PLAY"

[node name="songPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(977, 550)

[node name="bpmTimer" type="Timer" parent="."]

[node name="newEvent" type="Button" parent="."]
layout_mode = 0
offset_left = 1836.0
offset_top = 1000.0
offset_right = 1887.0
offset_bottom = 1050.0
theme = ExtResource("2_qy24j")
text = "+"

[node name="save" type="Button" parent="."]
layout_mode = 0
offset_left = 1420.0
offset_top = 27.0
offset_right = 1579.0
offset_bottom = 93.0
theme = ExtResource("2_qy24j")
text = "SAVE"

[node name="saveDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="seek" type="VScrollBar" parent="."]
layout_mode = 0
offset_left = 1843.0
offset_top = 138.0
offset_right = 1903.0
offset_bottom = 955.0

[node name="seekBar" type="ProgressBar" parent="seek"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 808.0
mouse_filter = 2
fill_mode = 2
show_percentage = false

[node name="tick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rweov")
volume_db = 14.858

[node name="return" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 27.0
offset_right = 167.0
offset_bottom = 93.0
theme = ExtResource("2_qy24j")
text = "BACK"

[node name="new" type="Button" parent="."]
layout_mode = 0
offset_left = 1793.0
offset_top = 31.0
offset_right = 1886.0
offset_bottom = 91.0
text = "NEW"

[node name="newDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ogg")
use_native_dialog = true

[connection signal="item_selected" from="scroll/vbox/eventlist" to="." method="_on_eventlist_item_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="button_up" from="load" to="." method="_on_load_button_up"]
[connection signal="text_changed" from="bpm" to="." method="_on_bpm_text_changed"]
[connection signal="text_changed" from="name" to="." method="_on_name_text_changed"]
[connection signal="button_up" from="play" to="." method="_on_play_button_up"]
[connection signal="timeout" from="bpmTimer" to="." method="_on_bpm_timer_timeout"]
[connection signal="button_up" from="newEvent" to="." method="_on_new_event_button_up"]
[connection signal="button_up" from="save" to="." method="_on_save_button_up"]
[connection signal="dir_selected" from="saveDialog" to="." method="_on_save_dialog_dir_selected"]
[connection signal="value_changed" from="seek" to="." method="_on_seek_value_changed"]
[connection signal="button_up" from="return" to="." method="_on_return_button_up"]
[connection signal="button_up" from="new" to="." method="_on_new_button_up"]
[connection signal="file_selected" from="newDialog" to="." method="_on_new_dialog_file_selected"]
